@@ -7,7 +7,7 @@ uses
   cthreads,
   {$ENDIF}{$ENDIF}
   Interfaces, // this includes the LCL widgetset
-  DefaultTranslator, LCLTranslator,
+  LCLVersion, DefaultTranslator, LCLTranslator,
   Forms, lazcontrols, DigIt_Bridge_Intf, DigIt_Bridge_Impl, DigIt_Types, DigIt_Counters, DigIt_Utils,
   DigIt_Form_Main, DigIt_Form_Templates,
   DigIt_Sources, DigIt_Destinations, DigIt_Form_Progress, DigIt_Form_BuildDuplex, DigIt_Source_WIA, Digit_Source_Folder;
