@@ -1,27 +1,28 @@
 object DigIt_Progress: TDigIt_Progress
   Left = 420
-  Height = 229
+  Height = 220
   Top = 216
-  Width = 400
+  Width = 396
+  Anchors = [akTop, akLeft, akRight]
+  AutoSize = True
   BorderIcons = [biSystemMenu]
   BorderStyle = bsSingle
   Caption = 'DigIt_Progress'
-  ClientHeight = 229
-  ClientWidth = 400
+  ClientHeight = 220
+  ClientWidth = 396
   DesignTimePPI = 120
   FormStyle = fsStayOnTop
   Position = poScreenCenter
-  LCLVersion = '4.99.0.0'
   OnCreate = FormCreate
   object panelTotal: TPanel
     Left = 0
     Height = 90
     Top = 0
-    Width = 400
+    Width = 396
     Align = alTop
     BevelOuter = bvNone
     ClientHeight = 90
-    ClientWidth = 400
+    ClientWidth = 396
     TabOrder = 0
     object capTotal: TLabel
       Left = 12
@@ -62,14 +63,14 @@ object DigIt_Progress: TDigIt_Progress
     Left = 0
     Height = 64
     Top = 160
-    Width = 400
+    Width = 396
     Align = alTop
     BevelOuter = bvNone
     ClientHeight = 64
-    ClientWidth = 400
+    ClientWidth = 396
     TabOrder = 1
     object btCancel: TBitBtn
-      Left = 145
+      Left = 141
       Height = 42
       Top = 12
       Width = 110
@@ -84,11 +85,11 @@ object DigIt_Progress: TDigIt_Progress
     Left = 0
     Height = 70
     Top = 90
-    Width = 400
+    Width = 396
     Align = alTop
     BevelOuter = bvNone
     ClientHeight = 70
-    ClientWidth = 400
+    ClientWidth = 396
     TabOrder = 2
     object capCurrent: TLabel
       Left = 12
