@@ -14,7 +14,7 @@ object DigIt_Main: TDigIt_Main
   OnShow = FormShow
   object imgManipulation: TBGRAImageManipulation
     Left = 288
-    Height = 523
+    Height = 511
     Top = 79
     Width = 873
     Align = alClient
@@ -34,7 +34,7 @@ object DigIt_Main: TDigIt_Main
   end
   object rollCrops: TBCExpandPanel
     Left = 0
-    Height = 523
+    Height = 511
     Top = 79
     Width = 288
     Align = alLeft
@@ -77,7 +77,7 @@ object DigIt_Main: TDigIt_Main
     ButtonPosition = akLeft
     ButtonSize = 20
     Button.Left = 0
-    Button.Height = 523
+    Button.Height = 511
     Button.Top = 0
     Button.Width = 20
     Button.Caption = 'Crop Areas'
@@ -1080,8 +1080,8 @@ object DigIt_Main: TDigIt_Main
   end
   object rollPages: TBCExpandPanel
     Left = 0
-    Height = 210
-    Top = 602
+    Height = 222
+    Top = 590
     Width = 1411
     Align = alBottom
     Background.Color = clBtnFace
@@ -1119,7 +1119,7 @@ object DigIt_Main: TDigIt_Main
     TabOrder = 1
     TextAlignment = taLeftJustify
     CollapseKind = akBottom
-    ExpandedSize = 210
+    ExpandedSize = 222
     ButtonPosition = akTop
     ButtonSize = 20
     Button.Left = 0
@@ -1134,7 +1134,7 @@ object DigIt_Main: TDigIt_Main
     Animated = False
     object tbCaptured: TToolBar
       Left = 1
-      Height = 188
+      Height = 200
       Top = 21
       Width = 31
       Align = alLeft
@@ -1167,7 +1167,7 @@ object DigIt_Main: TDigIt_Main
     end
     object lvCaptured: TListView
       Left = 32
-      Height = 188
+      Height = 200
       Top = 21
       Width = 1378
       Align = alClient
@@ -1175,6 +1175,7 @@ object DigIt_Main: TDigIt_Main
       Columns = <>
       ColumnClick = False
       IconOptions.Arrangement = iaLeft
+      IconOptions.WrapText = False
       LargeImages = imgListThumb
       ParentShowHint = False
       ReadOnly = True
@@ -1189,7 +1190,7 @@ object DigIt_Main: TDigIt_Main
   end
   object rollCounters: TBCExpandPanel
     Left = 1161
-    Height = 523
+    Height = 511
     Top = 79
     Width = 250
     Align = alRight
@@ -1232,7 +1233,7 @@ object DigIt_Main: TDigIt_Main
     ButtonPosition = akLeft
     ButtonSize = 20
     Button.Left = 0
-    Button.Height = 523
+    Button.Height = 511
     Button.Top = 0
     Button.Width = 20
     Button.Caption = 'Page Counters'
