@@ -1,34 +1,0 @@
-object FormAnimAcquiring: TFormAnimAcquiring
-  Left = 348
-  Height = 212
-  Top = 152
-  Width = 208
-  BorderIcons = []
-  BorderStyle = bsToolWindow
-  Caption = 'DigIt Acquiring...'
-  ClientHeight = 212
-  ClientWidth = 208
-  FormStyle = fsStayOnTop
-  Position = poScreenCenter
-  ShowInTaskBar = stNever
-  LCLVersion = '3.99.0.0'
-  object btAbort: TBitBtn
-    Left = 0
-    Height = 30
-    Top = 182
-    Width = 208
-    Align = alBottom
-    DefaultCaption = True
-    Kind = bkAbort
-    TabOrder = 0
-    OnClick = btAbortClick
-  end
-  object ProgressBar1: TProgressBar
-    Left = 10
-    Height = 20
-    Top = 34
-    Width = 190
-    Style = pbstMarquee
-    TabOrder = 1
-  end
-end
