@@ -1,3 +1,0 @@
-{"version":1,"strings":[
-{"hash":137489774,"name":"tformanimacquiring.caption","sourcebytes":[68,105,103,73,116,32,65,99,113,117,105,114,105,110,103,46,46,46],"value":"DigIt Acquiring..."}
-]}
