@@ -1,7 +1,9 @@
 DigIt CHANGE LOG
 ======================
 
-2025/02/07 Added Linux Project (Gtk2);
+2025/02/
+        20 UI Adjustments; Load/SaveWork Dialog=mrNo delete the xml and thumbs file
+        07 Added Linux Project (Gtk2);
 	   GUI Adjustments for Gtk2 support;
 2024/12/
         20 Use of CapturedFiles Array;
